--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.rafabarbeytodev.android.kotlin.mvvm">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,7 +16,7 @@
         android:theme="@style/Theme.MVVM"
         tools:targetApi="31">
         <activity
-            android:name="com.rafabarbeytodev.android.kotlin.mvvm.mainview.MainActivity"
+            android:name="com.rafabarbeytodev.android.kotlin.mvvm.ui.mainview.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
